--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,12 @@
 - name: Home
   link: /
-- name: About
-  link: /about.html
+- name: Categories
+  link: /categories/
 - name: Blog
-  link: /blog.html
+  link: /blog/
 - name: Staff
-  link: /staff.html
+  link: /staff/
+- name: About
+  link: /about/
+- name: Contact
+  link: /contact/
